# IMU

./: .flake8  .gitignore  CITATION.cff  CONTRIBUTING.md  FINAL.m  FINAL.py  FIX_DOCUMENTATION.md  GNSS_IMU_Fusion.py  GNSS_IMU_Fusion_Single_script.py  GNSS_X001.csv  IMU_Attitude_From_Accel_Gyro.docx  IMU_COMPREHENSIVE_GUIDE.md  LICENSE  Makefile  PRESENTATION_README.md  QUATERNION_FIXES_README.md  README.md  Smart_Sensor_Fusion_Workflow_Presentation.html  TASKS.md  Tasks_Master_Project_Vimal.docx  VIBRATION_DETECTION_README.md  VIBRATION_SYSTEM_OVERVIEW.md  align_and_validate_dtw_task6_task7.py  align_datasets_dtw.py  auto_plots.py  compare_python_matlab.py  config_full.yml  config_local.yaml  config_local_codex.yaml  config_local_v2.yaml  config_small.yml  config_small_all.yml  config_triad_test.yml  config_triadrun.yml  debug_scipy.py  example_config.yaml  experiments.py  export_mat.py  full_project_workflow.py  fusion_single.py  (+53 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
DATA/: README.md
IMU_MATLAB/: README.md  TRIAD.m  Task_1.m  Task_2.m  Task_3.m  Task_4.m  Task_5.m  compute_C_ECEF_to_NED.m  get_data_file.m  main.m  run_all_datasets.m
MATLAB/: FINAL.m  FINAL_demo.m  FINAL_script.m  GNSS_IMU_Fusion.m  GNSS_IMU_Fusion_Single_script.m  GNSS_IMU_Fusion_single.m  PIPELINE_SYNC_SUMMARY.m  README.md  README_pipeline.md  TRIAD.m  TRIAD_batch.m  Task5_FusedOnlyPlots.m  Task_1.m  Task_2.m  Task_3.m  Task_4.m  Task_4_full.m  Task_5.m  Task_5_try_once.m  Task_6.m  Task_7.m  align_and_validate_dtw_task6_task7.m  basic_butterworth_filter.m  check_latest_python_matlab.m  compare_python_matlab_results.m  compensate_vibration.m  compute_C_NED_to_ECEF.m  compute_biases.m  compute_overlay_metrics.m  compute_reference_vectors.m  constants.m  debug_fusion_pipeline.m  derive_velocity.m  detect_static_interval.m  detect_vibration.m  diagnose_velocity.m  ecef2geodetic.m  ecef2ned_series.m  ecef_to_geodetic.m  ensureCfgDefaults.m  (+95 more)
PYTHON/: GNSS_IMU_Fusion_Single_script.py  README.md  align_and_validate_dtw_task6_task7.py  plot_task6_results.py  task5_gnss_interp_ned_plot.py  task6_csv_statistics.py  task6_overlay_plot.py  task7_ecef_residuals_plot.py  task7_temperature_analysis.py  test_interactive_plotting.py  test_optimized_interactive.py  test_real_data_interactive.py  validate_and_plot.py  world_map_plot.py
Python/: FINAL.py  GNSS_IMU_Fusion.py  auto_plots.py  compare_python_matlab.py  export_mat.py  plots.py  utils.py  (+8 more)
(+654 files in other folders)
