[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imu_gnss_fusion"
version = "1.0.0"
description = "Python GNSS-IMU fusion and orientation estimation"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26.0",
  "scipy",
  "pandas",
  "matplotlib",
  "pyyaml",
  "tqdm",
  "tabulate",
  "rich",
  "filterpy",
  "cartopy",
  "geomaglib>=1.2.1",
  "fastdtw",
  "geopy",
]

[project.optional-dependencies]
# Packages needed when running the test suite.  They mirror the
# main requirements so that `pip install -e .[tests]` pulls in the
# full runtime stack together with pytest.
tests = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "filterpy",
    "rich",
    "cartopy",
    "tqdm",
    "tabulate",
    "fastdtw",
    "geopy",
    "pytest",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402", "E501"]
